@@ -1,3 +1,9 @@
+2019-06-26  Uroš Bizjak  <ubizjak@gmail.com>
+
+	PR target/89021
+	* config/i386/i386.c (ix86_autovectorize_vector_sizes):
+	Autovectorize 8-byte vectors for TARGET_MMX_WITH_SSE.
+
 2019-06-26  Iain Sandoe  <iain@sandoe.co.uk>
 
 	* config/rs6000/rs6000-internal.h (branch_island): New typedef.
